@@ -28,8 +28,6 @@ order.
     "Experiment ID:	3",,,,,,,,,,,,0.92
     ....
 * Add calculated fields.
-* It might be nice if "Unclosed Quote Error" dumped you a line number.  If it
-  is possible...
 * We've run into a requirement to be able to access the original row of a
   csv file, before it's been parsed. This allows us to give back to the
   user their original data rows, for any rows that we're unable to process
