@@ -876,7 +876,8 @@ class FasterCSV
               $2
             else
               # or throw an Exception
-              raise MalformedCSVError, 'Unquoted fields do not allow \r or \n.'
+              raise MalformedCSVError, "Unquoted fields do not allow " +
+                                       "\\r or \\n (line #{lineno + 1})."
             end
           end
         else                  # we found a quoted field...
@@ -896,7 +897,9 @@ class FasterCSV
         break csv
       end
       # if we're not empty?() but at eof?(), a quoted field wasn't closed...
-      raise MalformedCSVError, "Unclosed quoted field." if @io.eof?
+      if @io.eof?
+        raise MalformedCSVError, "Unclosed quoted field on line #{lineno + 1}."
+      end
       # otherwise, we need to loop and pull some more data to complete the row
     end
   end
